--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,27 @@
 // Navigation Styles here
+// Navigation Styles here
+header {
+    width: 100%;
+    padding: 2.5% 15%;
+    border-bottom: 2px dashed @navigation-border;
+    display: flex;
+    justify-content: space-between;
+
+    h1 {
+        width: 30%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .nav-bar {
+        width: 70%;
+        display: flex;
+        font-family: @navigation-font;
+        justify-content: space-evenly;
+    }
+
+}
+
+
+
+// return(Math.round(P * (((I/12) * Math.pow((1 + (I/12)), (N * 12))) / (Math.pow((1 + (I/12)), (N * 12)) - 1)) *100)/100)
