--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,26 +1,26 @@
 // Navigation Styles here
 // Navigation Styles here
-header {
-    width: 100%;
-    padding: 2.5% 15%;
-    border-bottom: 2px dashed @navigation-border;
-    display: flex;
-    justify-content: space-between;
 
-    h1 {
-        width: 30%;
-        display: flex;
-        justify-content: space-evenly;
-    }
+
+   
 
     .nav-bar {
-        width: 70%;
+        margin-right: 7%;
+        width: 40%;
         display: flex;
         font-family: @navigation-font;
         justify-content: space-evenly;
+        align-items: center;
+
+        a {
+            text-decoration: none;
+             color: @shark;
+             font-size: 1.6rem;
+        }
+        
     }
 
-}
+
 
 
 
