--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,21 @@
-.home {
+header {
+  width: 100%;
+  padding: 2.5% 15%;
+  border-bottom: 2px dashed @navigation-border;
+  display: flex;
+  justify-content: space-between;
 
-  // 
+   h1 {
+     width: 30%;
+     margin-left: 3%;
+     display: flex;
+     justify-content: space-evenly;
+   }
+
+}
+
+
+.home {
 
   .content-section {
     margin: 30px 0;
@@ -58,6 +73,15 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        padding: 4.5%;
+        font-size: 1.6rem;
+        text-align: center;
+        border-radius: 10px;
+        color: @white;
+        background-color: @button-bg;
+      }
     }
   }
 }
