--- a/less/home-page.less
+++ b/less/home-page.less
@@ -75,12 +75,7 @@ header {
       margin-bottom: 30px;
 
       .btn {
-        padding: 4.5%;
-        font-size: 1.6rem;
-        text-align: center;
-        border-radius: 10px;
-        color: @white;
-        background-color: @button-bg;
+       .btn-styles()
       }
     }
   }
